--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="header">
@@ -15,14 +16,15 @@
     </div>
   </div>
   <div class="container">
-    <div class="section-one"></div>
-      <div>
+    <div class="section-one">
+      <div class="hero-text">
         <div class="hero-text-main">This website is awesome</div>
         <div class="hero-text-secondary">Liirum laarumia plaah plaah plaah under the main title. It's smaller font and the color is lower contrast.</div>
         <button class="sign-up-button">Sign up</button>
       </div>
-      <div class="hero-image">
-      </div>
+      <div class="hero-image">This is a placeholder for an image</div>
+    </div>
+      
     <div class="section-two">
       <div class="info-header">Some random information.</div>
 
