Full page done apart from flex settings

--- a/index.html
+++ b/index.html
@@ -28,38 +28,36 @@
     <div class="section-two">
       <div class="info-header">Some random information.</div>
 
-      <div class="info">
+      <div class="info-content">
+
         <div class="info-part">
           <div class="info-image"></div>
           <div class="info-text">this is some subtext under and illustration or image</div>
         </div>
-      </div>
 
-      <div class="info">
         <div class="info-part">
           <div class="info-image"></div>
           <div class="info-text">this is some subtext under and illustration or image</div>
         </div>
-      </div>
 
-      <div class="info">
         <div class="info-part">
           <div class="info-image"></div>
           <div class="info-text">this is some subtext under and illustration or image</div>
         </div>  
-      </div>
 
-      <div class="info">
         <div class="info-part">
           <div class="info-image"></div>
           <div class="info-text">this is some subtext under and illustration or image</div>
-        </div>
-      </div>
+          </div>
+      </div>  
     </div>
 
     <div class="section-three">
-      <div class="quote">Surtur. Son of a bitch...you're still alive! I thought my father killed you, like, half a million years ago.</div>
-      <div class="quote-source">-Thor, God of Thunder</div>
+      <div class="review">
+        <div class="quote">Surtur. Son of a bitch...you're still alive! I thought my father killed you, like, half a million years ago.</div>
+        <div class="quote-source">-Thor, God of Thunder</div>
+      </div>
+      
     </div>
       
     <div class="section-four">
